--- a/src/css/Theme.css
+++ b/src/css/Theme.css
@@ -11,9 +11,17 @@
 }
 
 :root {
-    --primary-color: #4f5285;
-    --secondary-color: #c7c8da;
-    --font-dark: #2f2f2f;
+    --primary: #4f5285;
+    --secondary: #c7c8da;
+    --light: #d5d5d5;
+    --lighter: #e9eef1;
+    --dark: #1d2429;
+    --darker: #242c30;
+    --font: 'Outfit', sans-serif;
+    --faded: #97a2a8;
+    --border: #e5ebe9;
+
+    /* --font-dark: #2f2f2f;
     --font-light: #fff;
     --font-faded: #2c3f50;
     --font-hover: #000;
@@ -26,30 +34,34 @@
     --bg-dark: #0f0f0f;
     --bg-secondary: #dfecf1;
     --bg-ambient: rgba(255, 255, 255, 0.318);
-    --heading-color: #292922;
-    /* --border-color: rgba(0, 0, 0, 0.4); */
-    --border-color: rgb(204, 204, 204);
-    --path: #2F3545;
+    --heading-color: #292922; */
+    /* --border-color: rgb(204, 204, 204); */
     --ambient-box-shadow: rgba(255, 255, 255, 0.1) 0px 1px 1px 0px inset, rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
 }
 
 [data-theme=dark] {
-    --primary-color: #6e50fd;
-    --secondary-color: #494b64;
-    --font-dark: #e1e1ff;
+    --primary: #508199;
+    --secondary: #494b64;
+    --light: #1d2429;
+    --lighter: #242c30;
+    --dark: #fff;
+    --darker: #f9f9f9;
+    --font: 'Outfit', sans-serif;
+    --faded: #c1b9b9;
+    --border: rgba(255, 255, 255, 0.4);
+    /* --font-dark: #e1e1ff;
     --font-light: #2f2f2f;
     --font-faded: #c1b9b9;
     --font-hover: #fff;
     --font-hover-light: #000;
-    --bg-light: #0f0f0f;
-    --bg-extra-light: #1b1b1b;
+    --bg-light: #1d2429;
+    --bg-extra-light: #242c30;
     --bg-active: #272727;
     --bg-hover: #34296e83;
     --bg-dark: #fff;
     --bg-secondary: #121212;
     --bg-ambient: #0f0f0f69;
-    --heading-color: #fff;
-    --border-color: rgba(255, 255, 255, 0.4);
+    --heading-color: #fff; */
     --path: #fff;
     --bg-faded: #18181a;
     --ambient-box-shadow: rgba(255, 255, 255, 0.07) 0px 1px 1px 0px inset, rgba(62, 31, 170, 0.04) 0px 50px 100px -20px, rgba(157, 48, 172, 0.1) 0px 30px 60px -30px;
