--- a/src/App.css
+++ b/src/App.css
@@ -34,10 +34,6 @@ a {
     display: none;
 }
 
-/* .head-container {
-    background: #5d74bb;
-} */
-
 .head-container {
     display: flex;
     align-items: center;
@@ -66,7 +62,9 @@ a {
 }
 
 .btn-primary {
-    background: transparent;
+    background: var(--dark);
+    color: var(--light);
+
 }
 
 .btn-submit {
@@ -229,11 +227,14 @@ header {
     display: flex;
 }
 
-.header .btn {
+.header .btn,
+footer .btn {
     border-color: var(--light-const);
+    color: var(--light-const);
 }
 
-.header .btn-primary {
+.header .btn-primary,
+footer .btn-primary {
     background: var(--light-const);
     color: var(--primary);
     border: var(--light-const);
@@ -457,6 +458,7 @@ path {
 
 .banner-top .btn {
     border-color: var(--light-const);
+    color: var(--light-const);
 }
 
 .banner-top .btn-primary {
@@ -865,4 +867,202 @@ input:focus {
 
 .blur {
     filter: blur(2px);
+}
+
+/* 
+ */
+
+footer {
+    position: relative;
+    margin-top: 50px;
+}
+
+.footer-top {
+    display: flex;
+    flex-direction: column;
+    height: auto;
+    position: relative;
+    background: var(--primary);
+    clip-path: ellipse(75% 100% at center top);
+    padding: 25px;
+    align-items: center;
+    grid-gap: 1rem;
+
+}
+
+.footer-main-heading {
+    margin-top: 30px;
+    color: var(--light-const);
+    font-size: 25px;
+}
+
+
+
+.footer-middle {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    max-width: 76rem;
+    margin: auto;
+    padding: 50px;
+}
+
+.footer-logo {
+    padding: 2rem 0;
+}
+
+.footer-logo i {
+    font-size: 40px;
+}
+
+.footer-navbar {
+    width: 83%;
+}
+
+
+.footer-nav-menu-level-1 {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-gap: 1rem 0;
+    padding-left: 0;
+    padding-top: 0;
+    justify-items: center;
+}
+
+
+.footer-nav-menu-heading {
+    font-size: 1rem;
+    font-weight: 500;
+    color: var(--dark);
+    text-transform: uppercase;
+    height: 50px;
+    display: inline-block;
+}
+
+.footer-nav-item-level-2 a {
+    height: 40px;
+    display: inline-block;
+    color: var(--faded);
+    font-size: .875rem;
+}
+
+footer a {
+    border: 2px dotted transparent;
+}
+
+footer a:hover {
+    color: var(--dark);
+}
+
+footer a:active {
+    border: 2px dotted var(--border);
+}
+
+.footer-bottom {
+    display: flex;
+    justify-content: space-between;
+    max-width: 1200px;
+    margin: auto;
+    position: relative;
+}
+
+.footer-bottom::before {
+    content: "";
+    background: var(--darker);
+    position: absolute;
+    top: 0;
+    height: 2px;
+    left: 4vw;
+    right: 4vw;
+}
+
+.footer-bottom .footer-ul {
+    margin: 0 4vw;
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    flex-wrap: wrap;
+}
+
+.footer-bottom ul {
+    display: flex;
+    margin: 0;
+}
+
+.footer-bottom li {
+    padding: 2rem 0;
+}
+
+.footer-bottom ul:nth-child(1) li {
+    margin-right: 1rem;
+}
+
+.footer-bottom li a {
+    height: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 0.875rem;
+    font-weight: 500;
+    min-width: 30px;
+}
+
+.footer-bottom li a:hover {
+    color: var(--primary);
+}
+
+.footer-bottom ul li a i {
+    font-size: 18px;
+}
+
+.footer-end-credit {
+    max-width: 1200px;
+    margin: auto;
+    margin-bottom: 50px;
+}
+
+.footer-end-credit p {
+    margin: 0 4vw;
+    font-size: 0.75rem;
+    text-align: center;
+    color: var(--faded);
+}
+
+
+@media (max-width: 1100px) {
+    .footer-middle {
+        flex-direction: column;
+    }
+
+    .footer-navbar {
+        width: 100%;
+    }
+}
+
+
+@media (max-width: 832px) {
+
+    .footer-nav-menu-level-1 {
+        grid-template-columns: repeat(4, 1fr);
+    }
+}
+
+@media (max-width:680px) {
+    .footer-nav-menu-level-1 {
+        grid-template-columns: repeat(3, 1fr);
+    }
+}
+
+
+@media (max-width: 500px) {
+    .footer-bottom .footer-ul {
+        flex-direction: column;
+        align-items: center;
+    }
+}
+
+@media (max-width:468px) {
+    .footer-nav-menu-level-1 {
+        grid-template-columns: repeat(2, 1fr);
+    }
 }
