Changed Project.css to sass

--- a/src/App.css
+++ b/src/App.css
@@ -143,7 +143,7 @@ header {
     background: var(--bg-ambient);
     box-shadow: var(--ambient-box-shadow);
     color: var(--dark);
-    backdrop-filter: blur(300px);
+    backdrop-filter: var(--blur);
     padding: 2rem;
     border-radius: 50px;
     margin-top: 1rem;
