--- a/src/css/Popup.css
+++ b/src/css/Popup.css
@@ -12,6 +12,8 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
+    grid-gap: 0.5rem;
     transition: 0.3s;
     backdrop-filter: blur(10px);
     border-radius: 20px;
@@ -43,4 +45,11 @@
 .form-group {
     display: flex;
     flex-direction: column;
+}
+
+.popup-img {
+    width: 70%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 8px;
 }
