optimised projects animation

--- a/src/css/Project.scss
+++ b/src/css/Project.scss
@@ -80,7 +80,7 @@
   padding: 0.5rem 1rem;
   background: var(--primary-hover);
   border-radius: 5px;
-  color: var(--primary);
+  color: var(--primary-light);
   font-size: 12px;
   margin: 0.5rem 0;
 }
