--- a/src/css/Theme.css
+++ b/src/css/Theme.css
@@ -60,7 +60,7 @@
   --darker: #f9f9f9;
   --font: "Outfit", sans-serif;
   --faded: #999;
-  --border: rgba(255, 255, 255, 0.4);
+  --border: #8b96a5;
   --bg-ambient: #0f0f0f69;
   --blur: blur(50px);
   --primary-light: #508199;
