--- a/src/App.css
+++ b/src/App.css
@@ -302,6 +302,8 @@ path {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  align-self: center;
+  max-width: 50%;
 }
 
 .skills-card-left {
@@ -315,14 +317,52 @@ path {
   margin: 10px;
   border-radius: 35%;
   background: var(--bg-hover);
+  position: relative;
+  cursor: default;
 }
 
 .skills-card-left:hover {
   border-radius: 20%;
 }
 
+.skill-title {
+  position: absolute;
+  background: var(--primary);
+  color: #fff;
+  padding: 5px 10px;
+  border-radius: 10px;
+  top: -40px;
+  transition: 0.3s cubic-bezier(0.65, 0.59, 0, 1.59);
+  opacity: 0;
+  backdrop-filter: blur(30px);
+}
+
+.skills-card-left:hover .skill-title {
+  opacity: 1;
+  animation: slideUp 0.3s;
+}
+
+@keyframes slideUp {
+  0% {
+    transform: translateY(20px);
+    opacity: 0;
+  }
+  50% {
+    transform: translateY(-10px);
+    opacity: 0.5;
+  }
+  100% {
+    transform: translateY(0px);
+    opacity: 1;
+  }
+}
+
 .skills-card-left i {
   font-size: 24px;
+}
+
+.skill-image {
+  width: 32px;
 }
 
 .skills-card-left .progress-bar {
@@ -379,10 +419,12 @@ path {
 .education-pre h3 {
   font-weight: 500;
   font-size: 16px;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 
 .education-pre p {
-  font-size: 12px;
+  font-size: 14px;
   font-weight: 500;
   color: var(--faded);
   margin: 5px 0;
@@ -417,14 +459,14 @@ path {
 
 .about-pitch {
   max-width: 356px;
-  font-size: 14px;
+  font-size: 16px;
   text-align: center;
 }
 
 .about-name {
   margin: 0;
   color: var(--primary);
-  font-size: 12px;
+  font-size: 14px;
 }
 
 .about-name::before {
@@ -456,15 +498,16 @@ path {
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-top: 2rem;
 }
 
 .contact-left-up h3 {
-  font-size: 16px;
+  font-size: 18px;
 }
 
 .contact-left-up p {
   color: var(--faded);
-  font-size: 12px;
+  font-size: 14px;
   font-weight: 600;
   margin: 20px 0;
 }
@@ -510,7 +553,6 @@ textarea {
   margin: 5px 0;
   font-family: Quicksand;
   font-weight: 600;
-  width: 100%;
 }
 
 ::placeholder {
@@ -521,6 +563,10 @@ textarea {
 input:focus {
   border: 2px solid var(--primary);
   outline: 3px solid var(--secondary);
+}
+
+.contact-pre input {
+  width: 100%;
 }
 
 @media (max-width: 1284px) {
@@ -535,7 +581,7 @@ input:focus {
   }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 820px) {
   .skills-content {
     flex-direction: column;
   }
@@ -548,6 +594,10 @@ input:focus {
 
   .contact-pre {
     flex-direction: column;
+  }
+
+  .contact-left {
+    text-align: center;
   }
 }
 
