--- a/src/css/Screens.scss
+++ b/src/css/Screens.scss
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&family=Outfit:wght@100;200;300;400;500;600;700;800;900&display=swap");
+
 .home-projects {
   margin: auto;
   display: flex;
@@ -140,7 +142,18 @@
 }
 .item:hover .item-link {
   opacity: 1;
+  animation: slideUp 0.3s;
 }
+
+@keyframes slideUp {
+  0% {
+    transform: translateY(100%);
+  }
+  100% {
+    transform: translateY(0%);
+  }
+}
+
 .image-btn {
   border-radius: 5px;
   overflow: hidden;
@@ -165,6 +178,88 @@
 }
 .image-btn:hover::after {
   opacity: 1;
+}
+
+// SCE
+
+.react-tabs {
+  margin-top: 3rem;
+}
+
+.react-tabs__tab-list {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  cursor: pointer;
+  grid-gap: 1rem;
+  padding-bottom: 1rem;
+  max-width: 300px;
+  margin: auto;
+}
+
+.react-tabs__tab--selected {
+  outline: none;
+  background: var(--primary);
+  color: #fff;
+  border-radius: 5px;
+  padding: 0.5rem 1rem;
+}
+
+// Skills
+
+.skills-content-left {
+  margin-top: 3rem;
+}
+
+// education
+.section {
+  animation: popAndSlideUp 0.3s;
+}
+
+.react-tabs .education-card {
+  font-family: "JetBrains Mono";
+  display: flex;
+  flex-direction: column;
+  grid-gap: 1rem;
+  background: var(--lighter);
+  padding: 1rem;
+  border-radius: 8px;
+  animation: popAndSlideUp 0.3s;
+  margin-left: 0;
+}
+@keyframes popAndSlideUp {
+  0% {
+    transform: scale(0.5) translateY(100%);
+  }
+  100% {
+    transform: scale(1) translateY(0%);
+  }
+}
+
+.education-list-item {
+  display: flex;
+  align-items: center;
+  grid-gap: 0.5rem;
+}
+
+.education-list-item i {
+  color: #000;
+  background: #e5d5ff;
+  width: 32px;
+  height: 32px;
+  min-width: 32px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.education-list-item:nth-child(even) i {
+  background: #cfe4ff;
+}
+
+.education-list-item:nth-child(odd) i {
+  background: #c5efb1;
 }
 
 @media (max-width: 1500px) {
@@ -203,6 +298,7 @@
 
   .project-item-details {
     align-items: flex-start;
+    max-width: 100%;
   }
 
   .project-item-description {
@@ -213,5 +309,10 @@
 @media (max-width: 600px) {
   .home-projects {
     max-width: 350px;
+  }
+}
+@media (max-width: 512px) {
+  .react-tabs__tab-list {
+    flex-direction: column;
   }
 }
